GNOME Bugzilla – Bug 684812
Can't enter the same panel twice in a row
Last modified: 2012-09-25 19:27:06 UTC
- open System Settings - select a panel - click the icon on the toolbar to get back to the overview - select the same panel Panel won't open - on the terminal I can see (gnome-control-center:2402): GLib-GObject-CRITICAL **: g_object_set: assertion `G_IS_OBJECT (object)' failed
Created attachment 225166 [details] [review] shell: reset current panel ID when going back from overview Or we'll keep thinking to be in the first panel.
Created attachment 225167 [details] [review] shell: Fix entering the same panel twice Manually this time.
Attachment 225167 [details] pushed as b3287e1 - shell: Fix entering the same panel twice