shell: Fix entering the same panel twice

Manually this time.

https://bugzilla.gnome.org/show_bug.cgi?id=684812