shell/gnome-control-center.c
@@ -278,6 +278,7 @@ shell_show_overview_page (GnomeControlCenter *center)
     notebook_remove_page (priv->notebook, priv->current_panel_box);
   priv->current_panel = NULL;
   priv->current_panel_box = NULL;
+  g_clear_pointer (&priv->current_panel_id, g_free);
 
   /* clear the search text */
   g_free (priv->filter_string);
@@ -965,7 +966,7 @@ _shell_set_active_panel_from_id (CcShell      *shell,
       return TRUE;
     }
 
-  g_free (priv->current_panel_id);
+  g_clear_pointer (&priv->current_panel_id, g_free);
 
   /* clear any custom widgets */
   _shell_remove_all_custom_widgets (priv);
